[gd_scene load_steps=39 format=3 uid="uid://c3vntakhy0jq7"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_2stqb"]
[ext_resource type="Texture2D" uid="uid://d3nftxbopob5v" path="res://res/art/gameplay/player/player.png" id="2_mluj1"]
[ext_resource type="Script" path="res://scenes/components/spawn/spawner_component.gd" id="3_8jtw5"]
[ext_resource type="Script" path="res://scenes/components/movement/move_character_body_2d_component.gd" id="3_ijo0d"]
[ext_resource type="Script" path="res://scenes/components/input_component.gd" id="3_ptxy4"]
[ext_resource type="Texture2D" uid="uid://d07g3qtks3hl2" path="res://res/art/gameplay/shadow.png" id="3_sehm1"]
[ext_resource type="PackedScene" uid="uid://csafkqwts3rfk" path="res://scenes/gameplay/projectiles/projectiles/water_orb_projectile.tscn" id="4_r3uhc"]
[ext_resource type="Resource" uid="uid://ci047nbwo55s2" path="res://resources/stats/player/player_stats.tres" id="5_4c67a"]
[ext_resource type="Script" path="res://scenes/components/movement/augment_motion/augment_knockback_motion.gd" id="5_fo1cu"]
[ext_resource type="Script" path="res://scenes/components/stats/player_stats_component.gd" id="5_qbk8r"]
[ext_resource type="AudioStream" uid="uid://vs343xtxovq0" path="res://res/sound/sfx/exp_pickup.wav" id="6_7leyi"]
[ext_resource type="Script" path="res://scenes/components/sound/variable_pitch_audio_stream_player.gd" id="7_5wn3i"]
[ext_resource type="PackedScene" uid="uid://be7cq2knfj5bf" path="res://scenes/components/health/health_bar_component.tscn" id="7_h60ml"]
[ext_resource type="Texture2D" uid="uid://b3yhq4mnobip1" path="res://res/art/gameplay/lighting/actor_highres_light.png" id="13_8qh5f"]
[ext_resource type="Script" path="res://scenes/components/physics/hurtbox_component.gd" id="14_w7aay"]
[ext_resource type="Script" path="res://scenes/components/effects/flash/strobe_component.gd" id="16_jgv0s"]
[ext_resource type="Script" path="res://scenes/components/state_machine/state_machine.gd" id="17_5qhfy"]
[ext_resource type="Script" path="res://scenes/player/states/idle_state.gd" id="18_tvtj7"]
[ext_resource type="Script" path="res://scenes/player/states/walk_state.gd" id="19_23c0m"]
[ext_resource type="Script" path="res://scenes/player/states/flinch_state.gd" id="20_0jo2p"]
[ext_resource type="Script" path="res://scenes/player/states/death_state.gd" id="21_3p0xg"]
[ext_resource type="Script" path="res://scenes/player/states/level_up_state.gd" id="22_n3hr5"]
[ext_resource type="Script" path="res://scenes/components/powers/powers_component.gd" id="23_7ah85"]
[ext_resource type="PackedScene" uid="uid://iglbjvvq4tfx" path="res://scenes/components/powers/player_powers/test_power.tscn" id="24_070cw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cfm71"]
radius = 2.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w0kbq"]
atlas = ExtResource("2_mluj1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjww6"]
atlas = ExtResource("2_mluj1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyoyh"]
atlas = ExtResource("2_mluj1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlobm"]
atlas = ExtResource("2_mluj1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjc6a"]
atlas = ExtResource("2_mluj1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4n5j"]
atlas = ExtResource("2_mluj1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ajhn"]
atlas = ExtResource("2_mluj1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xunlo"]
atlas = ExtResource("2_mluj1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqqmm"]
atlas = ExtResource("2_mluj1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu6ld"]
atlas = ExtResource("2_mluj1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4goky"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0kbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjww6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyoyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlobm")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjc6a")
}],
"loop": false,
"name": &"flinch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4n5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ajhn")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xunlo")
}],
"loop": false,
"name": &"level_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqqmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu6ld")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wqknu"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1prqd"]
radius = 0.724638
height = 3.9

[node name="Player" type="CharacterBody2D" groups=["player"]]
process_mode = 3
y_sort_enabled = true
collision_layer = 0
motion_mode = 1
script = ExtResource("1_2stqb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
scale = Vector2(1.04, 1.04)
shape = SubResource("CapsuleShape2D_cfm71")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_4goky")
animation = &"death"
autoplay = "idle"

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.380392)
z_index = -3
position = Vector2(0.5, 2)
texture = ExtResource("3_sehm1")

[node name="Camera2D" type="Camera2D" parent="."]
modulate = Color(1, 1, 1, 0.654902)
position = Vector2(0, -9)

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "augment_motions")]
script = ExtResource("3_ijo0d")
actor = NodePath("..")
augment_motions = [NodePath("AugmentKnockbackMotion")]

[node name="AugmentKnockbackMotion" type="Node" parent="MoveComponent"]
script = ExtResource("5_fo1cu")
knockback_force = 200
dampen_force = 8

[node name="InputComponent" type="Node" parent="."]
script = ExtResource("3_ptxy4")

[node name="PlayerStatsComponent" type="Node" parent="."]
script = ExtResource("5_qbk8r")
stats = ExtResource("5_4c67a")

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("actorStatsComponent") instance=ExtResource("7_h60ml")]
position = Vector2(0, 18.825)
scale = Vector2(2, 2)
actorStatsComponent = NodePath("../PlayerStatsComponent")

[node name="SpawnerComponent" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("3_8jtw5")
scene = ExtResource("4_r3uhc")

[node name="Slots" type="Node2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(0, -7)

[node name="RightSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(8, -1)

[node name="DownSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(0, 8)

[node name="UpSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(0, -9)

[node name="LeftSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(-9, -1)

[node name="TopRightSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(3, -5)

[node name="BottomLeftSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(-5, 4)

[node name="TopLeftSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(-5, -6)

[node name="BottomRightSlot" type="Node2D" parent="Slots"]
y_sort_enabled = true
position = Vector2(5, 4)

[node name="PickupRange" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
shape = SubResource("CircleShape2D_wqknu")
debug_color = Color(0, 0.6, 0.701961, 0.101961)

[node name="PickupSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7leyi")
volume_db = -12.0
script = ExtResource("7_5wn3i")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -4)
energy = 0.2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.368627)
texture = ExtResource("13_8qh5f")
texture_scale = 0.4

[node name="LargeRadiusPointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -4)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.368627)
texture = ExtResource("13_8qh5f")
texture_scale = 0.6

[node name="HurtboxComponent" type="Area2D" parent="."]
visible = false
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 0
script = ExtResource("14_w7aay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
scale = Vector2(2.76, 2.76)
shape = SubResource("CapsuleShape2D_1prqd")

[node name="StrobeComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("16_jgv0s")
sprite = NodePath("../AnimatedSprite2D")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("parent", "starting_state")]
script = ExtResource("17_5qhfy")
parent = NodePath("..")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("walk_state", "flinch_state")]
script = ExtResource("18_tvtj7")
walk_state = NodePath("../WalkState")
flinch_state = NodePath("../FlinchState")

[node name="WalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "flinch_state")]
script = ExtResource("19_23c0m")
idle_state = NodePath("../IdleState")
flinch_state = NodePath("../FlinchState")

[node name="FlinchState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "death_state")]
script = ExtResource("20_0jo2p")
idle_state = NodePath("../IdleState")
death_state = NodePath("../DeathState")

[node name="DeathState" type="Node" parent="StateMachine"]
script = ExtResource("21_3p0xg")

[node name="LevelUpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("22_n3hr5")
idle_state = NodePath("../IdleState")

[node name="PowersComponent" type="Node2D" parent="." node_paths=PackedStringArray("player")]
process_mode = 1
y_sort_enabled = true
script = ExtResource("23_7ah85")
player = NodePath("..")
starting_power = ExtResource("24_070cw")

[connection signal="level_up" from="PlayerStatsComponent" to="." method="_on_player_stats_component_level_up"]
[connection signal="no_hp" from="PlayerStatsComponent" to="." method="_on_player_stats_component_no_hp"]
[connection signal="area_entered" from="PickupRange" to="." method="_on_pickup_range_area_entered"]
[connection signal="hurt" from="HurtboxComponent" to="." method="_on_hurtbox_component_hurt"]
